--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity android:name=".GameActivity" />
         <activity android:name=".VictoryActivity" />
+        <activity android:name=".GameOverActivity"/>
     </application>
 
 </manifest>
